--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,8 @@ name: Release
 on:
   push:
     branches:
+      - main
       - next
-  create:
-    tags:
-      - '*'
 
 permissions:
   contents: write
