--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "web"
   ],
   "files": [
-    "dist", "README.md"
+    "dist",
+    "README.md"
   ],
   "main": "./dist/webserial-core.umd.cjs",
   "module": "./dist/webserial-core.js",
@@ -38,17 +39,17 @@
     "format": "prettier --write ./lib/**/*.ts"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/w3c-web-serial": "^1.0.7",
-    "eslint": "^9.19.0",
-    "globals": "^15.14.0",
+    "@eslint/js": "^9.21.0",
+    "@types/w3c-web-serial": "^1.0.8",
+    "eslint": "^9.21.0",
+    "globals": "^15.15.0",
     "prettier": "3.4.2",
-    "puppeteer": "^24.1.1",
-    "semantic-release": "^24.2.1",
+    "puppeteer": "^24.4.0",
+    "semantic-release": "^24.2.3",
     "typescript": "~5.7.3",
-    "typescript-eslint": "^8.23.0",
-    "uuid": "^11.0.5",
-    "vite": "^6.0.11"
+    "typescript-eslint": "^8.26.0",
+    "uuid": "^11.1.0",
+    "vite": "^6.2.0"
   },
   "publishConfig": {
     "access": "public"
