--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "webserial",
     "serial",
     "core",
-    "web"
+    "web",
+    "iot",
+    "device",
+    "communication",
+    "usb"
   ],
   "files": [
     "dist",
@@ -25,8 +29,10 @@
   ],
   "main": "./dist/webserial-core.umd.cjs",
   "module": "./dist/webserial-core.js",
+  "types": "./dist/main.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/main.d.ts",
       "import": "./dist/webserial-core.js",
       "require": "./dist/webserial-core.umd.cjs"
     }
@@ -39,17 +45,14 @@
     "format": "prettier --write ./lib/**/*.ts"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
+    "@eslint/js": "^9.26.0",
     "@types/w3c-web-serial": "^1.0.8",
-    "eslint": "^9.22.0",
+    "eslint": "^9.26.0",
     "globals": "^15.15.0",
     "prettier": "3.4.2",
-    "puppeteer": "^24.4.0",
-    "semantic-release": "^24.2.3",
     "typescript": "~5.7.3",
-    "typescript-eslint": "^8.26.1",
-    "uuid": "^11.1.0",
-    "vite": "^6.2.2"
+    "typescript-eslint": "^8.32.0",
+    "vite": "^6.3.5"
   },
   "publishConfig": {
     "access": "public"
