--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webserial-core",
   "description": "Webserial Core to easy connections with serial devices",
-  "version": "1.0.11",
+  "version": "1.1.0-beta.1",
   "type": "module",
   "license": "MIT",
   "author": "danidoble",
@@ -45,14 +45,15 @@
     "format": "prettier --write ./lib/**/*.ts"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.0",
+    "@eslint/js": "^9.31.0",
     "@types/w3c-web-serial": "^1.0.8",
-    "eslint": "^9.30.0",
+    "eslint": "^9.31.0",
     "globals": "^15.15.0",
     "prettier": "3.4.2",
+    "socket.io-client": "^4.8.1",
     "typescript": "~5.7.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.0"
+    "typescript-eslint": "^8.36.0",
+    "vite": "^7.0.4"
   },
   "publishConfig": {
     "access": "public"
