--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webserial-core",
   "description": "Webserial Core to easy connections with serial devices",
-  "version": "1.1.0-beta.3",
+  "version": "1.1.0",
   "type": "module",
   "license": "MIT",
   "author": "danidoble",
