--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webserial-core",
   "description": "Webserial Core to easy connections with serial devices",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
   "license": "MIT",
   "author": "danidoble",
@@ -44,15 +44,17 @@
     "lint": "eslint --ext .ts ./lib",
     "format": "prettier --write ./lib/**/*.ts"
   },
+  "peerDependencies": {
+    "socket.io-client": "^4.8.1"
+  },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@types/w3c-web-serial": "^1.0.8",
     "eslint": "^9.35.0",
     "globals": "^16.4.0",
     "prettier": "3.6.2",
-    "socket.io-client": "^4.8.1",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.43.0",
+    "typescript-eslint": "^8.44.0",
     "vite": "^7.1.5"
   },
   "publishConfig": {
