--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webserial-core",
   "description": "Webserial Core to easy connections with serial devices",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "type": "module",
   "license": "MIT",
   "author": "danidoble",
@@ -29,17 +29,17 @@
   ],
   "main": "./dist/webserial-core.umd.cjs",
   "module": "./dist/webserial-core.js",
-  "types": "./dist/main.d.ts",
+  "types": "./dist/types/lib/main.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/main.d.ts",
+      "types": "./dist/types/lib/main.d.ts",
       "import": "./dist/webserial-core.js",
       "require": "./dist/webserial-core.umd.cjs"
     }
   },
   "scripts": {
     "dev": "vite",
-    "build": "prettier --write ./lib/**/*.ts && tsc && vite build",
+    "build": "rm -rf dist && prettier --write ./lib/**/*.ts && tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .ts ./lib",
     "format": "prettier --write ./lib/**/*.ts"
