--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,14 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": false,
     "isolatedModules": true,
     "moduleDetection": "force",
     "declaration": true,
     "emitDeclarationOnly": true,
     "declarationMap": true,
-    "outDir": "dist",
+    "outDir": "dist/types",
+    "composite": true,
 
     /* Linting */
     "strict": true,
