--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webserial-core",
   "description": "Webserial Core to easy connections with serial devices",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "type": "module",
   "license": "MIT",
   "author": "danidoble",
@@ -29,10 +29,10 @@
   ],
   "main": "./dist/webserial-core.umd.cjs",
   "module": "./dist/webserial-core.js",
-  "types": "./dist/types/lib/main.d.ts",
+  "types": "./dist/types/main.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/types/lib/main.d.ts",
+      "types": "./dist/types/main.d.ts",
       "import": "./dist/webserial-core.js",
       "require": "./dist/webserial-core.umd.cjs"
     }
